charon/tests/ui/simple/nested-closure-lifetime.out
error: Found inconsistent generics after translation:
       Mismatched regions:
       target: test_crate::foo::closure::closure
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::FunSig
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'a, T, [@TraitClause0]: @TraitDecl0<missing(@Type1_0)>, [@TraitClause1]: @TraitDecl1<missing(@Type1_0)>>
 --> tests/ui/simple/nested-closure-lifetime.rs:2:1
  |
2 | / fn foo<'a, T: Clone>(x: &'a T) -> impl Fn() -> &'a T {
3 | |     let f = move || move || x;
4 | |     f()
5 | | }
  | |_^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_0
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:13
  |
3 |     let f = move || move || x;
  |             ^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_1
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:13
  |
3 |     let f = move || move || x;
  |             ^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_0
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:13
  |
3 |     let f = move || move || x;
  |             ^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_1
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:13
  |
3 |     let f = move || move || x;
  |             ^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_0
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: 
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:13
  |
3 |     let f = move || move || x;
  |             ^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_1
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: 
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:13
  |
3 |     let f = move || move || x;
  |             ^^^^^^^^^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_0
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: 
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:21
  |
3 |     let f = move || move || x;
  |                     ^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_1
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: 
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:21
  |
3 |     let f = move || move || x;
  |                     ^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_0
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:21
  |
3 |     let f = move || move || x;
  |                     ^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_1
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:21
  |
3 |     let f = move || move || x;
  |                     ^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_0
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:21
  |
3 |     let f = move || move || x;
  |                     ^^^^^^^^^

error: Found inconsistent generics after transformations:
       Found incorrect clause var: 1_1
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::gast::FunDeclRef
         charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::FunDeclRef>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <'_0, T>
 --> tests/ui/simple/nested-closure-lifetime.rs:3:21
  |
3 |     let f = move || move || x;
  |                     ^^^^^^^^^

error: Found inconsistent generics after transformations:
       Mismatched regions:
       target: test_crate::foo::closure::closure
       expected: ['_0]
            got: []
       Visitor stack:
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::types::Ty
         charon_lib::ast::types::FunSig
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: <'a, T, [@TraitClause0]: @TraitDecl0<missing(@Type1_0)>, [@TraitClause1]: @TraitDecl1<missing(@Type1_0)>>
 --> tests/ui/simple/nested-closure-lifetime.rs:2:1
  |
2 | / fn foo<'a, T: Clone>(x: &'a T) -> impl Fn() -> &'a T {
3 | |     let f = move || move || x;
4 | |     f()
5 | | }
  | |_^

ERROR Charon failed to translate this code (14 errors)
